infra/k8s/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hibi-cloudflared
  namespace: hibi-portal
  labels:
    app.kubernetes.io/name: hibi-cloudflared
    app.kubernetes.io/part-of: hibi-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hibi-cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hibi-cloudflared
        app.kubernetes.io/part-of: hibi-portal
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - hibi-cloudflared
                topologyKey: kubernetes.io/hostname
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.2.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/cloudflared
              name: config
          command:
            - cloudflared
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config.yaml
            - --no-autoupdate
            - run
            - --token
            - "$(CLOUDFLARED_TUNNEL_TOKEN)"
      volumes:
        - name: config
          configMap:
            name: hibi-cloudflared-config
            items:
              - key: config.yaml
                path: config.yaml
